[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/Object_Pack/First_level_object/background/gate.png" type="Texture" id=1]
[ext_resource path="res://art/Map/1lv_object/background/gate.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 345.65

[sub_resource type="CapsuleShape2D" id=3]
radius = 191.635
height = 0.481873

[node name="StaticBody2D" type="StaticBody2D"]
position = Vector2( 6.34955, 55.559 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 7.3479, -106.171 )
scale = Vector2( 1.1, 1.1 )
frames = SubResource( 1 )
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -113.851, -2.4895 )
polygon = PoolVector2Array( 206.63, -139.458, 48.1072, -147.953, 35.2272, 66.3065, -52.9514, 60.6432, -25.2098, -214.024, 73.7266, -216.875, 293.818, -207.417, 250.224, 89.9034, 196.723, 87.0717 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -4.76221, -173.027 )
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 7.07111, -126.357 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="input_event" from="Area2D2" to="." method="_on_Area2D2_input_event"]
[connection signal="mouse_entered" from="Area2D2" to="." method="_on_Area2D2_mouse_entered"]
[connection signal="mouse_exited" from="Area2D2" to="." method="_on_Area2D2_mouse_exited"]
